# simple-calc

./: .gitignore  CMakeLists.txt  README.txt
experimental_gui/: CMakeLists.txt  cmake_uninstall.cmake.in  resources.xml
experimental_gui/res/: calc.ui  calc.ui~
experimental_gui/src/: main.c
src/: calc.c  calc.h  main.c
